--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.18.0",
+		"chart.js": "^2.8.0",
 		"jwt-decode": "^2.2.0",
 		"moment": "^2.24.0",
 		"react": "^16.8.6",
+		"react-chartjs-2": "^2.7.6",
 		"react-dom": "^16.8.6",
 		"react-moment": "^0.8.4",
 		"react-redux": "^6.0.1",
