--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"react": "^16.8.6",
 		"react-chartjs-2": "^2.7.6",
 		"react-dom": "^16.8.6",
+		"react-icons": "^3.5.0",
 		"react-moment": "^0.8.4",
 		"react-redux": "^6.0.1",
 		"react-router-dom": "^5.0.0",
